summer-k8s/istio/destinationrule/destinationrule-circuit-breaking.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews
spec:
  host: reviews
  subsets:
  - labels:
      version: v1
    name: v1
    trafficPolicy:
      connectionPool:
        tcp:
          maxConnections: 100
